# Faded-Dream-Toolkit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
cmake/: FDKConfig.cmake.in  fdk.pc.in
examples/hello/: CMakeLists.txt  hello.c
examples/showcase/: CMakeLists.txt  showcase.c
examples/systemwide-test/: CMakeLists.txt  systemwide_test.c
examples/theme-switcher/: CMakeLists.txt  theme_switcher.c
examples/widgets/: CMakeLists.txt  widgets.c
include/fdk/: fdk.h  fdk_widget.h
packaging/: PKGBUILD  fdk.spec
packaging/debian/: changelog  control  copyright  rules
src/core/: core.c  core_internal.h  theme.c  tween.c
src/platform/: platform_internal.h  wayland.c  x11.c
src/render/: font_internal.h  opengl.c  render_internal.h  software.c
src/widgets/: widget.c
sublicense/: SUBLICENSE
tests/: CMakeLists.txt  test_theme.c
themes/: faded-dream.fdktheme  rose.fdktheme  void.fdktheme
tools/fdk-theme/: CMakeLists.txt  fdk-theme.c
